--- a/sass/_elements.scss
+++ b/sass/_elements.scss
@@ -38,6 +38,10 @@
 }
 
 @media ( prefers-color-scheme:dark ) {
+    .message {
+        color: rgba( $color-dark, 0.9 );
+    }
+
     .action {
         color: rgba( $color-dark, 0.9 );
     }
