--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -3,6 +3,7 @@ $bg-dark: #1D1E1F;
 $color-light: #0B0B0B;
 $color-dark: #FFFFFF;
 $color-mid: #BABABA;
+$highlight: #1D87F1;
 $card-shadow: 1.3px 1.3px 1.4px rgba(0, 0, 0, 0.03),
                         10px 10px 11px rgba(0, 0, 0, 0.06),
                         -1.3px -1.3px 1.4px rgba(0, 0, 0, 0.03),
